--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
     </nav>
     <!-- End of Navbar -->
     <!-- start alert news -->
-    <!-- <div class="alert mb-0 alert-primary  rounded-0 border-0 alert-dismissible fade show text-center" role="alert">
+    <div class="alert mb-0 alert-primary  rounded-0 border-0 alert-dismissible fade show text-center" role="alert">
         بمناسبة شهر رمضان الكريم خصم 15% على جميع الدبلومات والدورات
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div> -->
+    </div> 
     <!-- End of Alert news -->
      <!-- start Hero section -->
     <div class="main hero">
@@ -158,7 +158,7 @@
               <div class="carousel-item active">
                 <img src="assets/images/hero/carousal4.jpg" class="img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column overlay">
-                    <div class="content text-color font-bold">
+                    <div class="content text-light font-bold">
                         <h2>
                             معهد المساندة العالي للتدريب
                             <!-- <i class="fa-solid fa-graduation-cap s-text-color"></i> -->
@@ -182,7 +182,7 @@
               <div class="carousel-item">
                 <img src="assets/images/hero/carousal6.jpg" class="img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column overlay">
-                    <div class="content text-color font-bold">
+                    <div class="content text-light ">
                         <h2>دبلومات | دورات | لغات</h2>
                         <p>نخبة من أمهر المدربين المعتمدين</p>
                         <div>
