--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="cairo-font">
     <!-- start home page --> 
       <!-- start Action bar -->
-    <div id="Action_bar" class="s-bg-color text-white py-2" style="font-size: 13px;">
+    <div id="Action_bar" class="s-bg-color text-center text-white py-2" style="font-size: 13px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
