--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <a class="text-white" href="mailto:info@almosanadah.net">info@almosanadah.net</a>
                             </li>
                         </ul>
-                        <ul class="social list-unstyled nav gap-2 d-flex align-items-center border-start px-2 mx-2">
+                        <ul class="social list-unstyled nav gap-2 d-flex align-items-center  px-2 mx-2">
                             <li class="tiktok">
                                 <a href="#" title="tiktok" class="text-white">
                                     <i class="fa-brands fa-tiktok fa-md"></i>
