--- a/index.html
+++ b/index.html
@@ -738,10 +738,10 @@
      <!-- footer -->
      <div class="footer s-bg-color" >
         <div class="container">
-            <div class="row">
+            <div class="row text-right text-md-center">
                 <div class="col-md-3">
                     <img src="assets/images/logo (2).png" alt="" srcset="" width="150">
-                    <ul class="list-group list-unstyled">
+                    <ul class="list-group list-unstyled p-0 m-0">
                         <li><a href="" class="list-group-item list-group-item-action">عن المعهد</a></li>
                         <li><a href="" class="list-group-item list-group-item-action">لماذا نحن ؟</a></li>
                         <li><a href="" class="list-group-item list-group-item-action">المدونة</a></li>
@@ -752,7 +752,7 @@
                     <h3 class="s-text-color my-5">
                         خدماتنا
                     </h3>
-                    <ul class="list-group list-unstyled">
+                    <ul class="list-group list-unstyled p-0 m-0">
                         <li><a href="" class="list-group-item list-group-item-action list-group-item-light"> دبلومات</a></li>
                         <li><a href="" class="list-group-item list-group-item-action list-group-item-light">دورات</a></li>
                         <li><a href="" class="list-group-item list-group-item-action list-group-item-light">مجالات</a></li>
@@ -762,7 +762,7 @@
                     <h3 class="s-text-color my-5">
                         فروعنا
                     </h3>
-                    <ul class="list-group list-unstyled">
+                    <ul class="list-group list-unstyled p-0 m-0">
                         <li><a href="" class="list-group-item list-group-item-action list-group-item-light"> المدينة المنورة</a></li>
                         <li><a href="" class="list-group-item list-group-item-action list-group-item-light"> الجوف</a></li>
                         <li><a href="" class="list-group-item list-group-item-action list-group-item-light">الرياض</a></li>
@@ -775,12 +775,12 @@
                     <h3 class="s-text-color my-5">
                         التواصل
                     </h3>
-                    <ul class="list-group list-unstyled">
+                    <ul class="list-group list-unstyled p-0 m-0">
                         <li><a href="" class="list-group-item list-group-item-action list-group-item-light">info@almosanadah.net</a></li>
                         <li><a href="" class="list-group-item list-group-item-action list-group-item-light"> 8001241212</a></li>
                     </ul>
                     
-                    <ul class="social list-unstyled nav gap-2 d-flex align-items-center border-start px-2 mx-2">
+                    <ul class="social list-unstyled nav gap-2 d-flex align-items-center border-start p-0 m-0">
                         <li class="tiktok">
                             <a href="#" title="tiktok" class="text-white">
                                 <i class="fa-brands fa-tiktok fa-md"></i>
