--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             </a>
                         </div>
                     </div>
-                    <svg class="hero__devider" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1983.72 60">
+                    <svg class="hero__devider" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                         <defs></defs>
                         <path fill="#fff" fill-opacity="1"  d="M1991.86,60H8.14C255.23,23.1,608.16,0,1000,0S1744.77,23.1,1991.86,60Z" transform="translate(-8.14)"/>
                     </svg>
@@ -198,8 +198,10 @@
                             </a>
                         </div>
                     </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                        <path fill="#fff" fill-opacity="1" d="M0,128L120,160C240,192,480,256,720,277.3C960,299,1200,277,1320,266.7L1440,256L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path>
+                    
+                    <svg class="hero__devider" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                        <defs></defs>
+                        <path fill="#fff" fill-opacity="1"  d="M1991.86,60H8.14C255.23,23.1,608.16,0,1000,0S1744.77,23.1,1991.86,60Z" transform="translate(-8.14)"/>
                     </svg>
                 </div>
               </div>
