--- a/index.html
+++ b/index.html
@@ -174,13 +174,10 @@
                             </a>
                         </div>
                     </div>
-                    <svg class="hero__devider" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                        <defs></defs>
-                        <path fill="#fff" fill-opacity="1"  d="M1991.86,60H8.14C255.23,23.1,608.16,0,1000,0S1744.77,23.1,1991.86,60Z" transform="translate(-8.14)"/>
-                    </svg>
-<!--                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                         <path fill="#fff" fill-opacity="1" d="M0,128L120,160C240,192,480,256,720,277.3C960,299,1200,277,1320,266.7L1440,256L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path>
-                    </svg> -->
+                    </svg>
                 </div>
               </div>
               <div class="carousel-item">
@@ -199,9 +196,8 @@
                         </div>
                     </div>
                     
-                    <svg class="hero__devider" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                        <defs></defs>
-                        <path fill="#fff" fill-opacity="1"  d="M1991.86,60H8.14C255.23,23.1,608.16,0,1000,0S1744.77,23.1,1991.86,60Z" transform="translate(-8.14)"/>
+                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                        <path fill="#fff" fill-opacity="1" d="M0,128L120,160C240,192,480,256,720,277.3C960,299,1200,277,1320,266.7L1440,256L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path>
                     </svg>
                 </div>
               </div>
