--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </nav>
     <!-- End of Navbar -->
     <!-- start alert news -->
-    <div class="alert mb-0 alert-warning bg-white  rounded-0 border-0 alert-dismissible fade show text-center" role="alert">
+    <div class="alert mb-0 alert-danger bg-white  rounded-0 border-0 alert-dismissible fade show text-center" role="alert">
         بمناسبة شهر رمضان الكريم خصم 15% على جميع الدبلومات والدورات
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div> 
