--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
                         <li><a href="" class="list-group-item list-group-item-action list-group-item-light"> 8001241212</a></li>
                     </ul>
                     
-                    <ul class="social list-unstyled nav gap-2 d-flex align-items-center border-start p-0 m-0">
+                    <ul class="social list-unstyled nav gap-2 d-flex align-items-center justify-content-center p-0 m-0">
                         <li class="tiktok">
                             <a href="#" title="tiktok" class="text-white">
                                 <i class="fa-brands fa-tiktok fa-md"></i>
