--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <div class="carousel-item active">
                 <img src="assets/images/hero/carousal4.jpg" class="img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column overlay">
-                    <div class="content text-light font-bold">
+                    <div class="content text-dark font-bold">
                         <h2>
                             معهد المساندة العالي للتدريب
                             <!-- <i class="fa-solid fa-graduation-cap s-text-color"></i> -->
@@ -183,7 +183,7 @@
               <div class="carousel-item">
                 <img src="assets/images/hero/carousal6.jpg" class="img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column overlay">
-                    <div class="content text-light ">
+                    <div class="content text-dark ">
                         <h2>دبلومات | دورات | لغات</h2>
                         <p>نخبة من أمهر المدربين المعتمدين</p>
                         <div>
